@@ -1,8 +1,10 @@
 2014-07-22  Justin Lippi  <jlippi@gmail.com>
 
+2014-07-22  Justin Lippi  <jlippi@gmail.com>
+
   *   khmer/__init__.py: import get_version method.
-  *   khmer/_khmermodule.cc: write get_version method in c++
-  *   tests/test_version.py: check that version from c matches version from
+  *   khmer/_khmermodule.cc: write get_version method in C++
+  *   tests/test_version.py: check that version from C++ matches version from
       versioneer
 
 2014-08-04  Michael R. Crusoe  <mcrusoe@msu.edu>
